--- a/tex/slides45mins.tex
+++ b/tex/slides45mins.tex
@@ -142,11 +142,15 @@ Li, Meghir and Oswald (2014)\vspace{3mm}}{\footnotesize\par}
 
 \section{Empirical Facts}
 
-\begin{transitionframe}
-       \begin{center}
-         { \Huge \bblue{Facts}}
-       \end{center}
-\end{transitionframe}
+\begin{frame}[plain]{}
+
+\vspace{1cm}
+
+\begin{center}
+\textbf{\textcolor{blue}{\LARGE{}Facts}}{\LARGE\par}
+\par\end{center}
+
+\end{frame}
 
 \begin{frame}{Definition of \emph{Region}: Census Division\hypertarget{Divisions}{}}
 
@@ -618,11 +622,16 @@ h_{it-1}=\beta_{0,h}+\beta_{1,h}t_{it}+\beta_{2,h}t_{it}^{2}+u_{it}
 \section{Value of migration }
 
 
-\begin{transitionframe}
-   \begin{center}
-     { \Huge \bblue{Results}}
-   \end{center}
-\end{transitionframe}
+
+\begin{frame}[plain]{}
+
+\vspace{1cm}
+
+\begin{center}
+\textbf{\textcolor{blue}{\LARGE{}Results}}{\LARGE\par}
+\par\end{center}
+
+\end{frame}
 
 
 \begin{frame}{Elasticity of Migration wrt Income Shock}
