--- a/tex/preamble.tex
+++ b/tex/preamble.tex
@@ -37,6 +37,8 @@
 \newcommand{\conti}{\setcounter{enumi}{\value{saveenumi}}}
 
 % define long or short presentation
+% short: 45 mins
+% long: 75-90 mins
 \newboolean{longv}
 \newboolean{shortv}
 % \setboolean{shortv}{true}
